--- a/public/templates/userNew.html
+++ b/public/templates/userNew.html
@@ -37,8 +37,11 @@
 		<input name='pwd' type='password' ng-model='pwd' class='form-control' required></input>
 	</div>
 </div>
-	<div class='col-sm-offset-2 col-sm-10'>
-		<input id='newUser_submit' class='btn btn-warning bnt-lg btn-block' type='submit' value='Hinzuf&uuml;gen' ng-disabled='eventForm.$invalid'>
-	</div>
+<div class='col-sm-offset-2 col-sm-10'>
+    <h3><span class='label label-default'>Bitte merken Sie sich Ihren User-Namen und Passwort für spätere Nutzung.</span></h3>
+</div>
+<div class='col-sm-offset-2 col-sm-10'>
+	<input id='newUser_submit' class='btn btn-warning bnt-lg btn-block' type='submit' value='Hinzuf&uuml;gen' ng-disabled='eventForm.$invalid'>
+</div>
 </form>
 </div>
