--- a/public/templates/registration.html
+++ b/public/templates/registration.html
@@ -143,7 +143,7 @@
 	</div>
 
 	<div class='col-sm-offset-2 col-sm4'>
-		<input type='checkbox' name='agb' ng-model='acceptAGB'><strong>  Ich akzeptiere die <a href='/#/agb/{{activityId}}'>allgemeinen Gesch&auml;ftsbedingungen</a></strong></input>
+		<input type='checkbox' name='agb' ng-model='acceptAGB'><strong>  Ich akzeptiere die <a href='/#/agb/{{activityId}}?type={{type}}'>allgemeinen Gesch&auml;ftsbedingungen</a></strong></input>
 	</div>
 
 	<div class='col-sm-offset-2 col-sm-10' style='margin-top:15px;'>
