--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -1,7 +1,7 @@
 <div class='container'>
 	<div class='row'>
 		<div class='col-sm-10'>
-			<h2 class='text-orange'>{{title}}</h2>
+			<h2 class='text-orange'>{{'EVENTS.TITLE' | translate}}</h2>
 		</div>
 		<div class='col-sm-2' ng-show='iSvc.isAuthorized("admin")'>
 			<a class='btn btn-success btn-block' href='/#/newEvent' role='button'>Neu</a>
