--- a/public/templates/eventInfo.html
+++ b/public/templates/eventInfo.html
@@ -9,8 +9,7 @@
 			{{event.info}}
 		</p>
 		<div class='col-sm-8'>
-		<a href='/#/' class='btn btn-warning' role='button'>Zur&uuml;ck</a>
+		<a href='/#/' class='btn btn-warning' role='button'>{{"INFO.BACK" | translate}}</a>
 		</div>
 	</div>
 </div>
-
