--- a/public/templates/myRegistrations.html
+++ b/public/templates/myRegistrations.html
@@ -1,21 +1,21 @@
 <div class='container'>
-	<h2 class='text-orange'>Erfolgreiche Reservierungen</h2>
-	<h3><span class='label label-default'>Einzahlungsschein wird mittels Email bis Ende April zugesandt. Vielen Dank für Ihre Anmeldung.</span></h3>
-	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
+	<h2 class='text-orange'></h2>
+	<h3><span class='label label-default'>{{"MYRESERVATION.TITLE" | translate}}</span></h3>
+	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'>{{"MYRESERVATION.NOTE" | translate}}</div>
 	<table class='table table-striped table-bordered'>
 		<tr>
-			<th>Programm</th>
-			<th>Woche</th>
-			<th>Angenommen</th>
-			<th>Bezahlt</th>
-			<th>FrühBetreuung</th>
-			<th>Vorname</th>
-			<th>Nachname</th>
-			<th>Geburtstag</th>
-			<th>Vorname Eltern</th>
-			<th>Nachname Eltern</th>
-			<th>Email Eltern</th>
-			<th>Tel. Eltern</th>
+			<th>{{"MYRESERVATION.LABEL_EVENT" | translate}}</th>
+			<th>{{"MYRESERVATION.LABEL_EVENTACTIVITY" | translate}}</th>
+			<th>{{"MYRESERVATION.LABEL_ACCEPT" | translate}}</th>
+			<th>{{"MYRESERVATION.LABEL_PAYED" | translate}}</th>
+			<th>{{"MYRESERVATION.LABEL_PRECARE_CHILD" | translate}}</th>
+			<th>{{"MYRESERVATION.LABEL_FIRSTNAME_CHILD" | translate}}</th>
+			<th>{{"MYRESERVATION.LABEL_LASTNAME_CHILD" | translate}}</th>
+			<th>{{"MYRESERVATION.LABEL_BIRTHDAY_CHILD" | translate}}</th>
+			<th>{{"MYRESERVATION.LABEL_FIRSTNAME_PARENT" | translate}}</th>
+			<th>{{"MYRESERVATION.LABEL_LASTNAME_PARENT" | translate}}</th>
+			<th>{{"MYRESERVATION.LABEL_MAIL_PARENT" | translate}}</th>
+			<th>{{"MYRESERVATION.LABEL_TEL_PARENT" | translate}}</th>
 		</tr>
 		<tr ng-repeat='reg in registrations | filter:filterReport(reg) | orderBy:colNameSort'>
 			<td>{{reg.activityId.eventId.location}} - {{reg.activityId.eventId.name}}</td>
