fix reservation tranlation

--- a/public/templates/myRegistrations.html
+++ b/public/templates/myRegistrations.html
@@ -5,7 +5,7 @@
 	<table class='table table-striped table-bordered'>
 		<tr>
 			<th>{{"MYRESERVATION.LABEL_EVENT" | translate}}</th>
-			<th>{{"MYRESERVATION.LABEL_EVENTACTIVITY" | translate}}</th>
+			<th>{{"MYRESERVATION.LABEL_ACTIVITY" | translate}}</th>
 			<th>{{"MYRESERVATION.LABEL_ACCEPT" | translate}}</th>
 			<th>{{"MYRESERVATION.LABEL_PAYED" | translate}}</th>
 			<th>{{"MYRESERVATION.LABEL_PRECARE_CHILD" | translate}}</th>
