--- a/public/templates/eventInfo.html
+++ b/public/templates/eventInfo.html
@@ -5,11 +5,10 @@
 		</div>
 
 		<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
-		<p class='col-sm-12'>
-			{{event.info}}
-		</p>
+		<p ng-show="lang == 'de'" class='col-sm-12'>{{event.info}}</p>
+		<p ng-show="lang == 'it'" class='col-sm-12'>{{event.info_it}}</p>
 		<div class='col-sm-8'>
-		<a href='/#/' class='btn btn-warning' role='button'>{{"INFO.BACK" | translate}}</a>
+			<a href='/#/' class='btn btn-warning' role='button'>{{"INFO.BACK" | translate}}</a>
 		</div>
 	</div>
 </div>
