--- a/public/templates/selection.html
+++ b/public/templates/selection.html
@@ -1,5 +1,12 @@
 <div class='container'>
-<h2 class='text-orange'>{{'SELECTION.TITLE' | translate}}</h2>
+<div class='row'>
+    <div class='col-sm-10'>
+        <h2 class='text-orange'>{{'SELECTION.TITLE' | translate}}</h2>
+    </div>
+    <div class='col-sm-2' ng-show='iSvc.isAuthorized("admin")'>
+        <a class='btn btn-success btn-block' href='/#/newEvent' role='button'>Neu</a>
+    </div>
+</div>
 
 <div ng-repeat='loc in locations'>
     <div class='card-orange'>
